// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scene should show tools 1`] = `
<DocumentFragment>
  .emotion-10 {
  max-width: 960px;
  margin: 0 auto;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding-top: 15px;
  padding-bottom: 15px;
}

.emotion-0 {
  width: 40px;
  height: 40px;
  border: 2px solid #ff6007;
  border-radius: 2px;
  margin-right: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  font-size: 23px;
  -webkit-letter-spacing: 6px;
  -moz-letter-spacing: 6px;
  -ms-letter-spacing: 6px;
  letter-spacing: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
          />
          <path
            d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
          />
        </svg>
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          VUTTR
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          Very Useful Tools to Remember
        </div>
      </div>
    </div>
    <div
      class="emotion-8 emotion-9"
    >
      <div
        data-testid="search-field"
      />
      <input
        css="[object Object]"
        data-testid="checkbox"
        label="Search in tags only"
      />
      <button
        data-testid="Button"
      >
         add 
      </button>
    </div>
    <div
      data-testid="tool-item"
    />
    <div
      data-testid="tool-item"
    />
    <div
      data-testid="tool-item"
    />
    <div
      data-testid="modal"
    />
    <div
      data-testid="modal"
    />
  </div>
</DocumentFragment>
`;

exports[`scene snapshot 1`] = `
<DocumentFragment>
  .emotion-10 {
  max-width: 960px;
  margin: 0 auto;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding-top: 15px;
  padding-bottom: 15px;
}

.emotion-0 {
  width: 40px;
  height: 40px;
  border: 2px solid #ff6007;
  border-radius: 2px;
  margin-right: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  font-size: 23px;
  -webkit-letter-spacing: 6px;
  -moz-letter-spacing: 6px;
  -ms-letter-spacing: 6px;
  letter-spacing: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="emotion-10 emotion-11"
  >
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
          />
          <path
            d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
          />
        </svg>
      </div>
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          VUTTR
        </div>
        <div
          class="emotion-4 emotion-5"
        >
          Very Useful Tools to Remember
        </div>
      </div>
    </div>
    <div
      class="emotion-8 emotion-9"
    >
      <div
        data-testid="search-field"
      />
      <input
        css="[object Object]"
        data-testid="checkbox"
        label="Search in tags only"
      />
      <button
        data-testid="Button"
      >
         add 
      </button>
    </div>
    <div
      data-testid="modal"
    />
    <div
      data-testid="modal"
    />
  </div>
</DocumentFragment>
`;
